--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "koa-router": "^7.0.1",
     "koa-session": "^3.3.1",
     "koa-static": "^2.0.0",
+    "lodash": "^4.6.1",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "pg": "^4.5.1",
