--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "pg": "^4.5.1",
     "pg-hstore": "^2.3.2",
     "pg-native": "^1.10.0",
+    "s3-browser-direct-upload": "^0.1.2",
     "sequelize": "^3.19.3",
     "webcamjs": "^1.0.6",
     "winston": "^2.2.0"
