--- a/package.json
+++ b/package.json
@@ -19,37 +19,36 @@
   },
   "homepage": "https://github.com/eddiew/rush#readme",
   "dependencies": {
-    "autosize": "^3.0.15",
-    "aws-sdk": "^2.2.45",
-    "bluebird": "^3.3.4",
-    "bootstrap": "^4.0.0-alpha.2",
-    "grunt-sass": "^2.0.0",
-    "jquery": "^3.1.1",
-    "koa": "^2.0.0-alpha.3",
-    "koa-bodyparser": "^3.0.0",
+    "autosize": "^3.0.20",
+    "aws-sdk": "^2.32.0",
+    "bluebird": "^3.5.0",
+    "bootstrap": "^4.0.0-alpha.6",
+    "jquery": "^3.2.1",
+    "koa": "^2.2.0",
+    "koa-bodyparser": "^4.2.0",
     "koa-convert": "^1.2.0",
     "koa-favicon": "^2.0.0",
     "koa-jade-render": "^1.0.0",
-    "koa-logger": "^2.0.0",
+    "koa-logger": "^2.0.1",
     "koa-mount": "^2.0.0",
-    "koa-passport": "^2.1.0",
+    "koa-passport": "^3.0.0",
     "koa-router": "^7.0.1",
-    "koa-session": "^3.3.1",
-    "koa-static": "^2.0.0",
-    "lodash": "^4.6.1",
+    "koa-session": "^5.0.0",
+    "koa-static": "^3.0.0",
+    "lodash": "^4.17.4",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
-    "pg": "^6.1.2",
+    "pg": "^6.1.5",
     "pg-hstore": "^2.3.2",
     "pg-native": "^1.10.0",
     "s3-browser-direct-upload": "^0.1.2",
-    "sequelize": "^3.19.3",
-    "webcamjs": "^1.0.6",
-    "winston": "^2.2.0"
+    "sequelize": "^3.30.2",
+    "webcamjs": "^1.0.22",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-sass": "^1.0.0"
+    "grunt-sass": "^2.0.0"
   }
 }
