--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "koa-bodyparser": "^4.2.0",
     "koa-convert": "^1.2.0",
     "koa-favicon": "^2.0.0",
+    "koa-generic-session": "^1.11.5",
     "koa-jade-render": "^1.0.0",
     "koa-logger": "^2.0.1",
     "koa-mount": "^2.0.0",
