--- a/package.json
+++ b/package.json
@@ -20,37 +20,37 @@
   "homepage": "https://github.com/eddiew/rush#readme",
   "dependencies": {
     "autosize": "^3.0.20",
-    "aws-sdk": "^2.32.0",
-    "bluebird": "^3.5.0",
-    "bootstrap": "^4.0.0-alpha.6",
+    "aws-sdk": "^2.422.0",
+    "bluebird": "^3.5.3",
+    "bootstrap": "^4.3.1",
     "jquery": "^3.2.1",
-    "koa": "^2.2.0",
-    "koa-bodyparser": "^4.2.0",
+    "koa": "^2.7.0",
+    "koa-bodyparser": "^4.2.1",
     "koa-convert": "^1.2.0",
     "koa-favicon": "^2.0.0",
-    "koa-generic-session": "^1.11.5",
+    "koa-generic-session": "^1.11.7",
     "koa-jade-render": "^1.0.0",
     "koa-logger": "^2.0.1",
     "koa-mount": "^2.0.0",
     "koa-passport": "^3.0.0",
     "koa-router": "^7.0.1",
-    "koa-session": "^5.0.0",
+    "koa-session": "^5.10.1",
     "koa-static": "^3.0.0",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.11",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "pg": "^6.1.5",
     "pg-hstore": "^2.3.2",
     "s3-browser-direct-upload": "^0.1.2",
-    "sequelize": "^3.30.2",
+    "sequelize": "^3.34.0",
     "webcamjs": "^1.0.22",
-    "winston": "^2.3.1"
+    "winston": "^2.4.4"
   },
   "devDependencies": {
-    "grunt": "^1.0.1",
+    "grunt": "^1.0.3",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-sass": "^2.0.0",
-    "node-sass": "^4.5.2",
-    "pm2": "^2.4.4"
+    "node-sass": "^4.11.0",
+    "pm2": "^2.10.4"
   }
 }
