--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "build": "grunt",
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/eddiew/rush#readme",
   "dependencies": {
+    "@koa/cors": "^2.2.3",
     "autosize": "^3.0.20",
     "aws-sdk": "^2.422.0",
     "bluebird": "^3.5.3",
@@ -37,6 +38,7 @@
     "koa-session": "^5.10.1",
     "koa-static": "^3.0.0",
     "lodash": "^4.17.11",
+    "nodemon": "^1.18.10",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "pg": "^6.1.5",
