--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "aws-sdk": "^2.635.0",
     "bluebird": "^3.7.2",
     "bootstrap": "^4.4.1",
+    "dotenv": "^8.2.0",
     "jquery": "^3.4.1",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.1",
@@ -53,6 +54,7 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-sass": "^3.1.0",
     "node-sass": "^4.13.1",
-    "pm2": "^4.2.3"
+    "pm2": "^4.2.3",
+    "prettier": "1.19.1"
   }
 }
