--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "aws-sdk": "^2.635.0",
     "bluebird": "^3.7.2",
     "bootstrap": "^4.4.1",
+    "date-fns": "^2.10.0",
     "dotenv": "^8.2.0",
     "jquery": "^3.4.1",
     "koa": "^2.11.0",
